# libgrf

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: libgrf.pc.in
inc/: grfsupport.h
